[gd_scene load_steps=4 format=3 uid="uid://bngueft45pxke"]

[ext_resource type="PackedScene" uid="uid://b1eg4lgqwdml7" path="res://scenes/dungeons/dungeon_template.tscn" id="1_aagb3"]
[ext_resource type="Script" uid="uid://dtdc562q8ulu3" path="res://scenes/dungeons/main_sub_gate_4.gd" id="2_7m2v0"]
[ext_resource type="PackedScene" uid="uid://ca5ijfjdvqu1o" path="res://scenes/warp_zone.tscn" id="2_kn7a2"]

[node name="dungeon" instance=ExtResource("1_aagb3")]
script = ExtResource("2_7m2v0")

[node name="GridMap" parent="." index="0"]
data = {
"cells": PackedInt32Array(-4, 1, 393216, -4, 0, 393216, -5, 0, 393216, -5, 65535, 393216, -5, 65534, 393216, -5, 65533, 393216, -4, 65533, 393216, -4, 65534, 393216, -4, 65535, 393216, -5, 1, 393216, 65530, 1, 393216, 65530, 0, 393216, 65530, 65535, 393216, 65530, 65534, 393216, 65530, 65533, 393216, -6, 1, 393216, -6, 0, 393216, -6, 65535, 393216, -6, 65534, 393216, -6, 65533, 393216, 65528, 1, 1441807, 65529, 1, 1048581, 65529, 65533, 1048581, 65530, 65532, 5, 65531, 65532, 5, 65532, 65532, 5, 65533, 65533, 1441797, 65533, 65534, 1441797, 65533, 0, 1441797, 65533, 1, 1441797, 65532, 2, 655365, 65531, 2, 655365, 131065, 1, 1048581, 131065, 0, 1048581, 131065, 65535, 1048581, 131065, 65534, 1048581, 131065, 65533, 1048581, 131067, 65532, 5, 65529, 65529, 393216, 65528, 65529, 393216, 65527, 65529, 393216, 65531, 65529, 393216, 65532, 65529, 393216, 65533, 65529, 393216, 65534, 65529, 393216, 65530, 65529, 393216, 65527, 65528, 393216, 65534, 65528, 393216, 65527, 65526, 983042, 65534, 65526, 983042, -2, 65524, 393216, -2, 65523, 393216, -9, 65524, 393216, -9, 65523, 393216, -9, 65521, 393216, -9, 65522, 393216, -8, 65522, 393216, -8, 65521, 393216, -2, 65522, 393216, -2, 65521, 393216, -3, 65521, 393216, -3, 65522, 393216, -4, 65522, 393216, -5, 65522, 393216, -6, 65522, 393216, -7, 65522, 393216, -7, 65521, 393216, -6, 65521, 393216, -5, 65521, 393216, -4, 65521, 393216, 2, 65529, 393216, 2, 65524, 393216, 2, 65525, 393216, 2, 65526, 393216, 2, 65527, 393216, 2, 65528, 393216, 65548, 65520, 9, 65549, 65520, 9, 65550, 65520, 9, 65551, 65520, 9, 65552, 65520, 9, 16, 65521, 393216, 15, 65521, 393216, 14, 65521, 393216, 13, 65521, 393216, 12, 65521, 393216, 12, 65522, 393216, 13, 65522, 393216, 14, 65522, 393216, 15, 65522, 393216, 16, 65522, 393216, 16, 65523, 393216, 15, 65523, 393216, 14, 65523, 393216, 13, 65523, 393216, 12, 65523, 393216, 12, 65524, 393216, 12, 65525, 393216, 12, 65526, 393216, 12, 65527, 393216, 13, 65527, 393216, 14, 65527, 393216, 15, 65527, 393216, 16, 65527, 393216, 16, 65526, 393216, 16, 65525, 393216, 16, 65524, 393216, 15, 65524, 393216, 14, 65524, 393216, 13, 65524, 393216, 13, 65525, 393216, 14, 65525, 393216, 15, 65525, 393216, 15, 65526, 393216, 14, 65526, 393216, 13, 65526, 393216, 65552, 65530, 393216, 65551, 65530, 393216, 65550, 65530, 393216, 65549, 65530, 393216, 65548, 65530, 393216, 65548, 65531, 393216, 65549, 65531, 393216, 65550, 65531, 393216, 65551, 65531, 393216, 65552, 65531, 393216, 65548, 65517, 393216, 65549, 65517, 393216, 65550, 65517, 393216, 65551, 65517, 393216, 65552, 65517, 393216, 65552, 65516, 393216, 65551, 65516, 393216, 65550, 65516, 393216, 65549, 65516, 393216, 65548, 65516, 393216, 16, 65513, 393216, 15, 65513, 393216, 14, 65513, 393216, 13, 65513, 393216, 12, 65513, 393216, 12, 65512, 393216, 12, 65511, 393216, 13, 65511, 393216, 14, 65511, 393216, 15, 65511, 393216, 16, 65511, 393216, 16, 65512, 393216, 15, 65512, 393216, 14, 65512, 393216, 13, 65512, 393216, 65548, 65510, 9, 65549, 65510, 9, 65550, 65510, 9, 65551, 65510, 9, 65552, 65510, 9, 65550, 65507, 393216, 65549, 65507, 393216, 65548, 65507, 393216, 65547, 65507, 393216, 65546, 65507, 393216, 65545, 65507, 393216, 65544, 65507, 393216, 65544, 65508, 393216, 65544, 65509, 393216, 65543, 65509, 393216, 65541, 65509, 720898, 2, 65509, 720898, -1, 65509, 720898, -65540, 65509, 720898, -131078, 65509, 393216, 131086, 65532, 1048579, 131086, 65533, 1048580, 131086, 65534, 1048580, 131066, 65532, 1441795, 131066, 65530, 1048579, 131071, 65529, 655363, 65537, 65529, 3, 65539, 65524, 655363, 65540, 65524, 655364, 65541, 65525, 1048580, 65541, 65526, 1048580, 65541, 65527, 1048580, 65542, 65529, 1048580, 65541, 65528, 1179656, 65542, 65528, 1310728, 65542, 65530, 1179656, 65544, 65530, 131080, 65543, 65530, 4, 65544, 65529, 1441796, 65544, 65528, 1441796, 65544, 65527, 524296, 65545, 65527, 131080, 65545, 65526, 1441796, 65545, 65525, 1310728, 65544, 65525, 1179656, 65544, 65524, 1048580, 65544, 65523, 1048580, 65544, 65522, 524296, 65545, 65522, 131080, 65545, 65521, 524296, 65546, 65521, 655364, 65547, 65521, 3, 65541, 65524, 1310728, 131086, 65519, 1441795, 131086, 65518, 1048579, 65552, 65529, 1048588, 65551, 65529, 1048588, 65550, 65529, 1048588, 65549, 65529, 1048588, 65548, 65529, 1048588, 65552, 65528, 1048589, 65551, 65528, 1048589, 65550, 65528, 1048589, 65549, 65528, 1048589, 65548, 65528, 1048589, 65552, 65515, 1048588, 65551, 65515, 1048588, 65550, 65515, 1048588, 65549, 65515, 1048588, 65548, 65515, 1048588, 65552, 65514, 1048589, 65551, 65514, 1048589, 65550, 65514, 1048589, 65549, 65514, 1048589, 65548, 65514, 1048589, 65547, 65511, 1048581, 65547, 65512, 1048581, 65547, 65513, 1048581, 65547, 65514, 1048581, 65547, 65515, 1048581, 131083, 65516, 1048581, 131083, 65517, 1048581, 131084, 65518, 655365, 131085, 65518, 655365, 131087, 65518, 655365, 131088, 65518, 655365, 131089, 65517, 1441797, 131089, 65516, 1441797, 65553, 65515, 1441797, 65553, 65514, 1441797, 65553, 65513, 1441797, 65553, 65512, 1441797, 65553, 65511, 1441797, 131083, 65510, 1048581, 131084, 65509, 5, 131088, 65509, 5, 131089, 65510, 1441797, 131087, 65519, 5, 131088, 65519, 5, 131084, 65519, 5, 131085, 65519, 5, 131089, 65520, 1441797, 65553, 65521, 1441797, 65553, 65522, 1441797, 65553, 65523, 1441797, 65553, 65524, 1441797, 65553, 65525, 1441797, 65553, 65526, 1441797, 65553, 65527, 1441797, 65553, 65528, 1441797, 65553, 65529, 1441797, 131089, 65530, 1441797, 131089, 65531, 1441797, 131088, 65532, 655365, 131087, 65532, 655365, 131085, 65532, 655365, 131084, 65532, 655365, 131083, 65531, 1048581, 131083, 65530, 1048581, 65547, 65529, 1048581, 65547, 65528, 1048581, 65547, 65527, 1048581, 65547, 65526, 1048581, 65547, 65525, 1048581, 65547, 65524, 1048581, 65547, 65523, 1048581, 65547, 65522, 1048581, 131083, 65520, 1048581, 131086, 65509, 1441795, 131086, 65508, 1048579, 65533, 65535, 655363, 65534, 65535, 655364, 65535, 65535, 655364, 131065, 65530, 655365, 131064, 65530, 655365, 131063, 65530, 655365, 131062, 65529, 1048581, 131062, 65528, 1048581, 131062, 65527, 1048581, 131062, 65526, 1048581, 131062, 65525, 1048581, 65526, 65527, 1048581, 65526, 65526, 1048581, 65526, 65525, 1048581, 65526, 65524, 1048581, 65526, 65523, 1048581, 65526, 65522, 1048581, 65526, 65521, 1048581, 65527, 65520, 5, 65528, 65520, 5, 65529, 65520, 5, 65530, 65520, 5, 65531, 65520, 5, 65532, 65520, 5, 65533, 65520, 5, 65534, 65520, 5, 65535, 65521, 1441797, 65535, 65522, 1441797, 65535, 65523, 1441797, 65535, 65524, 1441797, 65535, 65525, 1441797, 65535, 65526, 1441797, 65535, 65527, 1441797, 131071, 65525, 1441797, 131071, 65526, 1441797, 131071, 65527, 1441797, 131071, 65528, 1441797, 131070, 65530, 655365, 131069, 65530, 655365, 131068, 65530, 655365, 131067, 65530, 655365, 65533, 65523, 1048577, 65532, 65523, 655365, 65531, 65523, 655365, 65530, 65523, 655365, 65529, 65523, 655365, 65533, 65524, 1048581, 65533, 65525, 1048581, 65533, 65526, 1048581, 65533, 65527, 1048581, 131068, 65528, 5, 131067, 65528, 5, 131066, 65528, 5, 131065, 65528, 5, 131064, 65527, 1441797, 131064, 65526, 1441797, 131064, 65525, 1441797, 65528, 65527, 1441797, 65528, 65526, 1441797, 65528, 65525, 1441797, 65528, 65524, 1441797, 65528, 65523, 655361, 131069, 65528, 1, 131064, 65528, 1441793, 131069, 65527, 1048581, 131069, 65526, 1048581, 131069, 65525, 1048581, 65536, 65529, 4, 65538, 65530, 655365, 65537, 65528, 1048581, 65537, 65527, 1048581, 65537, 65526, 1048581, 65537, 65525, 1048581, 65537, 65524, 1048581, 65538, 65523, 5, 65539, 65525, 1441797, 65539, 65526, 1441797, 65539, 65527, 1441797, 65539, 65528, 1441797, 65539, 65529, 1441797, 131087, 65507, 1441797, 131082, 65508, 655365, 131083, 65508, 655365, 131084, 65508, 655365, 131085, 65508, 655365, 131080, 65510, 655365, 131079, 65510, 655365, 131078, 65510, 655365, 131077, 65510, 655365, 131076, 65510, 655365, 65542, 65510, 655365, 65541, 65510, 655365, 65540, 65510, 655365, 65539, 65510, 655365, 65538, 65510, 655365, 65537, 65510, 655365, 3, 65510, 655365, 2, 65510, 655365, 1, 65510, 655365, 0, 65510, 655365, 65535, 65510, 655365, 65534, 65510, 655365, -65536, 65510, 655365, -1, 65510, 655365, -2, 65510, 655365, -3, 65510, 655365, -4, 65510, 655365, -5, 65510, 655365, -65539, 65510, 655365, -65540, 65510, 655365, -65541, 65510, 655365, -65542, 65510, 655365, -65542, 65508, 5, -65541, 65508, 5, -65540, 65508, 5, -65539, 65508, 5, -5, 65508, 5, -4, 65508, 5, -3, 65508, 5, -2, 65508, 5, -1, 65508, 5, -65536, 65508, 5, 65534, 65508, 5, 65535, 65508, 5, 0, 65508, 5, 1, 65508, 5, 2, 65508, 5, 3, 65508, 5, 65537, 65508, 5, 65538, 65508, 5, 65539, 65508, 5, 65540, 65508, 5, 65541, 65508, 5, 65542, 65508, 5, 131077, 65508, 5, 131076, 65508, 5, 131078, 65508, 5, 131079, 65508, 1, 131080, 65506, 5, 131081, 65506, 5, 131082, 65506, 5, 131083, 65506, 5, 131084, 65506, 5, 131086, 65506, 5, 131085, 65506, 5, 131079, 65507, 1048581, 131081, 65509, 1441797, 131081, 65508, 655361, -65543, 65509, 3, -65544, 65509, 655364, -65545, 65509, 655364, 131066, 65531, 1441796, 131085, 65509, 5, 131087, 65509, 5, 131066, 2, 1048579, 131066, 3, 131080, 131064, 3, 1179656, 131065, 3, 655364, 65529, 65535, 3, 65529, 65534, 1048581, 65529, 0, 1048581, 65528, 65535, 524296, 65530, 2, 655365)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="Warp Zone" parent="." index="4" instance=ExtResource("2_kn7a2")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, -9.5, -1.5, -26.5)

[node name="w2" parent="." index="5" instance=ExtResource("2_kn7a2")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0.5, 0.5, -0.5)

[node name="w5" parent="." index="6" instance=ExtResource("2_kn7a2")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 14.5, 2.5, -0.5)

[connection signal="body_entered" from="Warp Zone" to="." method="_on_warp_zone_body_entered"]
[connection signal="body_entered" from="w2" to="." method="_on_w2_body_entered"]
[connection signal="body_entered" from="w5" to="." method="_on_w_3_body_entered"]
